--- a/kadai_003/index_for_student.html
+++ b/kadai_003/index_for_student.html
@@ -19,6 +19,7 @@
 <body>
   <main>
     <!-- カールセル開始 -->
+     
     <!-- carousel クラス と slide クラスを適用します-->
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">  
       <div class="carousel-inner">
@@ -36,11 +37,11 @@
         </div>
 
         <div class="carousel-item">
-        <img src="img/top_2.jpg" alt="サンプル画像">
+        <img src="img/top_2.jpg" alt="サンプル画像2">
         </div>
 
         <div class="carousel-item">
-        <img src="img/top_3.jpg" alt="サンプル画像">
+        <img src="img/top_3.jpg" alt="サンプル画像3">
         </div>
 
       </div>
